fix: fix 'import cycle not allowed' bug caused by mockgen
