# api/swagger/swagger.yaml
@@ -1,7 +1,3 @@
-# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
-# Use of this source code is governed by a MIT style
-# license that can be found in the LICENSE file.
-
 basePath: /v1
 consumes:
 - application/json
@@ -283,83 +279,6 @@ definitions:
       phone:
         type: string
         x-go-name: Phone
-      updatedAt:
-        description: |-
-          UpdatedAt is a timestamp representing the server time when this object was updated.
-          Clients may not set this value. It is represented in RFC3339 form and is in UTC.
-
-          Populated by the system.
-          Read-only.
-          Null for lists.
-        format: date-time
-        type: string
-        x-go-name: UpdatedAt
-    required:
-    - name
-    - nickname
-    - password
-    - email
-    title: User represents a user restful resource. It is also used as gorm model.
-    type: object
-    x-go-package: github.com/marmotedu/api/apiserver/v1
-  UserListV2:
-    properties:
-      items:
-        items:
-          $ref: '#/definitions/UserV2'
-        type: array
-        x-go-name: Items
-      totalCount:
-        format: int64
-        type: integer
-        x-go-name: TotalCount
-    title: UserListV2 v2 struct.
-    type: object
-    x-go-package: github.com/marmotedu/api/apiserver/v1
-  UserV2:
-    properties:
-      createdAt:
-        description: |-
-          CreatedAt is a timestamp representing the server time when this object was
-          created. It is not guaranteed to be set in happens-before order across separate operations.
-          Clients may not set this value. It is represented in RFC3339 form and is in UTC.
-
-          Populated by the system.
-          Read-only.
-          Null for lists.
-        format: date-time
-        type: string
-        x-go-name: CreatedAt
-      email:
-        type: string
-        x-go-name: Email
-      id:
-        description: |-
-          ID is the unique in time and space value for this object. It is typically generated by
-          the storage on successful creation of a resource and is not allowed to change on PUT
-          operations.
-
-          Populated by the system.
-          Read-only.
-        format: uint64
-        type: integer
-        x-go-name: ID
-      isAdmin:
-        format: int64
-        type: integer
-        x-go-name: IsAdmin
-      name:
-        type: string
-        x-go-name: Name
-      nickname:
-        type: string
-        x-go-name: Nickname
-      password:
-        type: string
-        x-go-name: Password
-      phone:
-        type: string
-        x-go-name: Phone
       totalPolicy:
         format: int64
         type: integer
@@ -380,7 +299,21 @@ definitions:
     - nickname
     - password
     - email
-    title: UserV2 user v2 struct.
+    title: User represents a user restful resource. It is also used as gorm model.
+    type: object
+    x-go-package: github.com/marmotedu/api/apiserver/v1
+  UserList:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/User'
+        type: array
+        x-go-name: Items
+      totalCount:
+        format: int64
+        type: integer
+        x-go-name: TotalCount
+    title: UserList is the whole list of all users which have been stored in stroage.
     type: object
     x-go-package: github.com/marmotedu/api/apiserver/v1
 host: iam.api.marmotedu.com
@@ -933,7 +866,7 @@ responses:
   listUserResponse:
     description: List users response.
     schema:
-      $ref: '#/definitions/UserListV2'
+      $ref: '#/definitions/UserList'
   okResponse:
     description: Return nil json object.
   updatePolicyResponse:
