# internal/apiserver/service/v1/user.go
@@ -24,8 +24,8 @@ type UserSrv interface {
 	Delete(ctx context.Context, username string, opts metav1.DeleteOptions) error
 	DeleteCollection(ctx context.Context, usernames []string, opts metav1.DeleteOptions) error
 	Get(ctx context.Context, username string, opts metav1.GetOptions) (*v1.User, error)
-	List(ctx context.Context, opts metav1.ListOptions) (*v1.UserListV2, error)
-	ListWithBadPerformance(ctx context.Context, opts metav1.ListOptions) (*v1.UserListV2, error)
+	List(ctx context.Context, opts metav1.ListOptions) (*v1.UserList, error)
+	ListWithBadPerformance(ctx context.Context, opts metav1.ListOptions) (*v1.UserList, error)
 	ChangePassword(ctx context.Context, user *v1.User) error
 }
 
@@ -40,7 +40,7 @@ func newUsers(srv *service) *userService {
 }
 
 // ListUser returns user list in the storage. This function has a good performance.
-func (u *userService) List(ctx context.Context, opts metav1.ListOptions) (*v1.UserListV2, error) {
+func (u *userService) List(ctx context.Context, opts metav1.ListOptions) (*v1.UserList, error) {
 	users, err := u.store.Users().List(ctx, opts)
 	if err != nil {
 		log.L(ctx).Errorf("list users from storage failed: %s", err.Error())
@@ -68,18 +68,16 @@ func (u *userService) List(ctx context.Context, opts metav1.ListOptions) (*v1.Us
 				return
 			}
 
-			m.Store(user.ID, &v1.UserV2{
-				User: &v1.User{
-					ObjectMeta: metav1.ObjectMeta{
-						ID:        user.ID,
-						Name:      user.Name,
-						CreatedAt: user.CreatedAt,
-						UpdatedAt: user.UpdatedAt,
-					},
-					Nickname: user.Nickname,
-					Email:    user.Email,
-					Phone:    user.Phone,
+			m.Store(user.ID, &v1.User{
+				ObjectMeta: metav1.ObjectMeta{
+					ID:        user.ID,
+					Name:      user.Name,
+					CreatedAt: user.CreatedAt,
+					UpdatedAt: user.UpdatedAt,
 				},
+				Nickname:    user.Nickname,
+				Email:       user.Email,
+				Phone:       user.Phone,
 				TotalPolicy: policies.TotalCount,
 			})
 		}(user)
@@ -96,49 +94,47 @@ func (u *userService) List(ctx context.Context, opts metav1.ListOptions) (*v1.Us
 		return nil, err
 	}
 
-	// infos := make([]*v1.UserV2, 0)
-	infos := make([]*v1.UserV2, 0, len(users.Items))
+	// infos := make([]*v1.User, 0)
+	infos := make([]*v1.User, 0, len(users.Items))
 	for _, user := range users.Items {
 		info, _ := m.Load(user.ID)
-		infos = append(infos, info.(*v1.UserV2))
+		infos = append(infos, info.(*v1.User))
 	}
 
 	log.L(ctx).Debugf("get %d users from backend storage.", len(infos))
 
-	return &v1.UserListV2{ListMeta: users.ListMeta, Items: infos}, nil
+	return &v1.UserList{ListMeta: users.ListMeta, Items: infos}, nil
 }
 
 // ListWithBadPerformance returns user list in the storage. This function has a bad performance.
-func (u *userService) ListWithBadPerformance(ctx context.Context, opts metav1.ListOptions) (*v1.UserListV2, error) {
+func (u *userService) ListWithBadPerformance(ctx context.Context, opts metav1.ListOptions) (*v1.UserList, error) {
 	users, err := u.store.Users().List(ctx, opts)
 	if err != nil {
 		return nil, errors.WithCode(code.ErrDatabase, err.Error())
 	}
 
-	infos := make([]*v1.UserV2, 0)
+	infos := make([]*v1.User, 0)
 	for _, user := range users.Items {
 		policies, err := u.store.Policies().List(ctx, user.Name, metav1.ListOptions{})
 		if err != nil {
 			return nil, errors.WithCode(code.ErrDatabase, err.Error())
 		}
 
-		infos = append(infos, &v1.UserV2{
-			User: &v1.User{
-				ObjectMeta: metav1.ObjectMeta{
-					ID:        user.ID,
-					Name:      user.Name,
-					CreatedAt: user.CreatedAt,
-					UpdatedAt: user.UpdatedAt,
-				},
-				Nickname: user.Nickname,
-				Email:    user.Email,
-				Phone:    user.Phone,
+		infos = append(infos, &v1.User{
+			ObjectMeta: metav1.ObjectMeta{
+				ID:        user.ID,
+				Name:      user.Name,
+				CreatedAt: user.CreatedAt,
+				UpdatedAt: user.UpdatedAt,
 			},
+			Nickname:    user.Nickname,
+			Email:       user.Email,
+			Phone:       user.Phone,
 			TotalPolicy: policies.TotalCount,
 		})
 	}
 
-	return &v1.UserListV2{ListMeta: users.ListMeta, Items: infos}, nil
+	return &v1.UserList{ListMeta: users.ListMeta, Items: infos}, nil
 }
 
 func (u *userService) Create(ctx context.Context, user *v1.User, opts metav1.CreateOptions) error {
